Development
	Some minor fixes to the dbus interface
	Add uk and ru translation patches
	Fix randomization of first file in playlist
	Add in y, g, and J hotkeys to match mplayer hotkeys
	Add stored DVD device to drop down if not detected by gio, workaround RedHat Bug #850402
    Change idledata->device to mplayer_dvd_device may fix problem with dvd device being forgotten
    Fix dconf configuration file
    Don't enable MPRIS in plugin mode
    Basic scrolling wheel patch from Issue #621
	Clean up Issue #629, warning by cppcheck
	Fix some German translations by Wolfgang Knauf
	Fix some compiler errors noticed by Wolfgang Knauf
	Clean up log message if volume is not updated yet
    Remove resize handle from fullscreen and plugin windows
    Change g_strcasecmp to g_ascii_strcasecmp to clean up complier warnings
    Handle the new error message from gmtk-media-player
    Allow musicbrainz to be searched by artist only
    Bump configure.in to require gmtk 1.0.7 or higher (due to gm_log changes)
    Change some log levels in get_cover_art
    Fix logic in shutdown and cancel volume update callback
    Fix a hang on startup when getting volume from pulseaudio (has something to due with GTK event queue and gtk_main not called
    Make cover art scaling consistent
    Move various global variables to file-local (static)
    Clean up the title bar name display
    Since we are using gm_log for messages, move the inits above the first message
    Fix a few issues identified by cppcheck
    Added make valgrind and make valgrind-suppress to src/Makefile
    	valgrind-suppress requires this file http://www.gnome.org/~johan/gtk.suppression in your home directory
    remove hardcoded size of langlist and codepagelist in langlist.h
    Add a tooltip to the "Default Audio/Subtitle Language" config options
    Include wait.h to define some macros so that code will compile on Ubuntu
    Fix compilation issue with nautilus plugin